--- a/ota.html
+++ b/ota.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>FlyApp</title>
+    <title>OTA</title>
 </head>
 <body>
     <h1>iOS应用OTA安装</h1>
-    <a title="iPhone" href="itms-services://?action=download-manifest&url=https://tanghengzhi.com/get-UDID/flyapp.plist">Download</a>
+    <a title="iPhone" href="itms-services://?action=download-manifest&url=https://tanghengzhi.com/get-UDID/sfb.plist">Download</a>
 </body>
 </html>
