--- a/ota.html
+++ b/ota.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>iOS应用OTA安装</h1>
-    <a title="iPhone" href="itms-services://?action=download-manifest&url=https://tanghengzhi.com/get-UDID/sfb.plist">Download</a>
+    <a title="iPhone" href="itms-services://?action=download-manifest&url=https://tanghengzhi.com/sigh-php/sfb.plist">Download</a>
 </body>
 </html>
